--- a/Stakraft.HostSystem.Support/Stakraft.HostSystem.Support.csproj
+++ b/Stakraft.HostSystem.Support/Stakraft.HostSystem.Support.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="soporte\" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
