--- a/Stakraft.HostSystem.Support/Stakraft.HostSystem.Support.csproj
+++ b/Stakraft.HostSystem.Support/Stakraft.HostSystem.Support.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.0" />
+    <PackageReference Include="Serilog" Version="4.1.0-dev-02235" />
   </ItemGroup>
 
 </Project>
