Estructura Repository e Implementaciones

--- a/Stakraft.HostSystem.Repository/Stakraft.HostSystem.Repository.csproj
+++ b/Stakraft.HostSystem.Repository/Stakraft.HostSystem.Repository.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repository\Impl\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Stakraft.HostSystem.Support\Stakraft.HostSystem.Support.csproj" />
   </ItemGroup>
 
 </Project>
