--- a/Statkraft.HostSystem.WebApi/appsettings.json
+++ b/Statkraft.HostSystem.WebApi/appsettings.json
@@ -1,4 +1,46 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Database=DB_H2H_LIM_PROD;Trusted_Connection=True; Trust Server Certificate=true"
+  },
+  "jwt": {
+    "Key": "Starkraft2021@@stk",
+    "Issuer": "http://limwvsbt001p",
+    "Audience": "http://limwvsbt001p",
+    "Subject": "HostToHostSubjectStk",
+    "ClockSkew": 5,
+    "expires": 60
+  },
+  "sftp": {
+    "sufixOut": "-VAL",
+    "bei": "STAT0000H2H",
+    "pais": "PE",
+    "sufixAutorizado": ".R_PROC_",
+    "sufixRecibido": ".R_RECI_",
+    "sufixInvalido": ".R_VALI_"
+  },
+  "hangfire": {
+    "interval-procesar": "1",
+    "interval-send": "1",
+    "interval-out": "1"
+  },
+  "Serilog": {
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": { "path": "C:\\inetpub\\wwwroot\\SRV_H2H_BACK_PRD\\Log-App\\" }
+      }
+    ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
