--- a/Stakraft.HostSystem.Support/Stakraft.HostSystem.Support.csproj
+++ b/Stakraft.HostSystem.Support/Stakraft.HostSystem.Support.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
