--- a/Statkraft.HostSystem.WebApi/appsettings.json
+++ b/Statkraft.HostSystem.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=DB_H2H_LIM_PROD;Trusted_Connection=True; Trust Server Certificate=true"
+    "DefaultConnection": "Server=150.106.111.142;User ID=svc_h2h; Password=eAAUmJpUmSFDF6tX;Database=DB_H2H_LIM_PRD;Trusted_Connection=False;"
   },
   "jwt": {
     "Key": "Starkraft2021@@stk",
