Update Token and Authorization

--- a/Statkraft.HostSystem.WebApi/appsettings.Development.json
+++ b/Statkraft.HostSystem.WebApi/appsettings.Development.json
@@ -3,9 +3,9 @@
     "DefaultConnection": "Server=127.0.0.1;Database=DB_H2H_LIM_PROD;Trusted_Connection=True; Trust Server Certificate=true"
   },
   "jwt": {
-    "Key": "Starkraft2021@@stk",
-    "Issuer": "http://limwvsbt001p",
-    "Audience": "http://limwvsbt001p",
+    "Key": "Starkraft2024@@stkNewTokenKeyH0st",
+    "Issuer": "http://localhost:4200", //JWTAuthenticationServer
+    "Audience": "http://localhost:4200", //JWTServicePostmanClient
     "Subject": "HostToHostSubjectStk",
     "ClockSkew": 5,
     "expires": 60
@@ -44,7 +44,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore.Authentication": "debug",
+      "Microsoft.AspNetCore.Authorization": "debug"    
     }
   },
   "AllowedHosts": "*"
