--- a/Statkraft.HostSystem.WebApi/appsettings.json
+++ b/Statkraft.HostSystem.WebApi/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=150.106.111.142;User ID=svc_h2h; Password=eAAUmJpUmSFDF6tX;Database=DB_H2H_LIM_PRD;Trusted_Connection=False;"
+    "DefaultConnection": "Server=150.106.111.142;User ID=svc_h2h; Password=eAAUmJpUmSFDF6tX;Database=DB_H2H_LIM_PRD;Trusted_Connection=False;TrustServerCertificate=True"
   },
   "jwt": {
-    "Key": "Starkraft2021@@stk",
+    "Key": "Starkraft2024@@stkNewTokenKeyH0st",
     "Issuer": "http://limwvsbt001p",
     "Audience": "http://limwvsbt001p",
     "Subject": "HostToHostSubjectStk",
